--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=6dd27e0a5e6b7c
+MAIL_PASSWORD=32ccb1fa18b9b3
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
