--- a/.env
+++ b/.env
@@ -21,13 +21,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-#https://mailtrap.io
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=3ae01ec3633352
-MAIL_PASSWORD=5006a34f494f49
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=shomie.organization@gmail.com
+MAIL_PASSWORD=shomie2017
+MAIL_ENCRYPTION=ssl
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
