Added the admin view + search added

--- a/.env
+++ b/.env
@@ -39,10 +39,10 @@ FACEBOOK_ID=527563050909931
 FACEBOOK_SECRET=965e6a052c2a115ee83ee4810e9cc7f3
 FACEBOOK_URL=http://localhost/auth/facebook/callback
 
-#GOOGLE_ID=63494840015-fts2d4pb2vlumv259gbd1ljg0i78pftj.apps.googleusercontent.com
-#GOOGLE_SECRET=j3A7Vi3ikolXSz0rui9XKIrS
-#GOOGLE_URL=http://localhost/auth/google/callback
-
 GOOGLE_ID=63494840015-fts2d4pb2vlumv259gbd1ljg0i78pftj.apps.googleusercontent.com
 GOOGLE_SECRET=j3A7Vi3ikolXSz0rui9XKIrS
-GOOGLE_URL=http://shomie.io/auth/google/callback
+GOOGLE_URL=http://localhost/auth/google/callback
+
+#GOOGLE_ID=63494840015-fts2d4pb2vlumv259gbd1ljg0i78pftj.apps.googleusercontent.com
+#GOOGLE_SECRET=j3A7Vi3ikolXSz0rui9XKIrS
+#GOOGLE_URL=http://shomie.io/auth/google/callback
