Modification login using authentication social media

--- a/.env
+++ b/.env
@@ -31,18 +31,18 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-#FACEBOOK_ID=1935902530055726
-#FACEBOOK_SECRET=0e41a1604aaaba357bd8c95fab41dbaa
-#FACEBOOK_URL=http://shomie.io/auth/facebook/callback
+FACEBOOK_ID=1935902530055726
+FACEBOOK_SECRET=0e41a1604aaaba357bd8c95fab41dbaa
+FACEBOOK_URL=https://www.shomie.io/auth/facebook/callback
 
-FACEBOOK_ID=527563050909931
-FACEBOOK_SECRET=965e6a052c2a115ee83ee4810e9cc7f3
-FACEBOOK_URL=http://localhost/auth/facebook/callback
-
-GOOGLE_ID=63494840015-fts2d4pb2vlumv259gbd1ljg0i78pftj.apps.googleusercontent.com
-GOOGLE_SECRET=j3A7Vi3ikolXSz0rui9XKIrS
-GOOGLE_URL=http://localhost/auth/google/callback
+#FACEBOOK_ID=527563050909931
+#FACEBOOK_SECRET=965e6a052c2a115ee83ee4810e9cc7f3
+#FACEBOOK_URL=http://localhost/auth/facebook/callback
 
 #GOOGLE_ID=63494840015-fts2d4pb2vlumv259gbd1ljg0i78pftj.apps.googleusercontent.com
 #GOOGLE_SECRET=j3A7Vi3ikolXSz0rui9XKIrS
-#GOOGLE_URL=http://shomie.io/auth/google/callback
+#GOOGLE_URL=http://localhost/auth/google/callback
+
+GOOGLE_ID=113248308656-9d37cac3f28oa607giuctljd6tcj9tgk.apps.googleusercontent.com
+GOOGLE_SECRET=bqstQJMcTdkhHNSDfTd6JDgS
+GOOGLE_URL=https://www.shomie.io/auth/google/callback
